--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 
     <div class="main">
         <div class="headers" id="headers">
-            <div class="posts btn" id="posts">posts</div>
-            <div class="polls btn"id="polls">polls</div>
-            <div class="jobs btn " id="jobs">jobs</div>
+            <div class="posts btn" id="story">story</div>
+            <div class="polls btn"id="poll">polls</div>
+            <div class="jobs btn " id="job">jobs</div>
         </div>
     </div>
+    
     <script src="./script.js"></script>
 </body>
 </html>
